small text change

--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -19,7 +19,7 @@
 }
 </style>
 
-<h1 id="dashboard-header">Dashboard</h1>
+<h1 id="dashboard-header">Online Modules</h1>
 
 <div id="dashboard-toc">
     <div id="modules">
