--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -182,5 +182,12 @@ the Health Resources and Services Administration, U.S. Department of Health and 
     alert(message);
   }
 </script>
+{% if STAGING_ENV %}
+<div class="alert alert-error" style="position: fixed; bottom: 0px;">
+<h4>Warning: Staging Site</h4>
+<p>You are viewing a staging version of this site, not the production site.</p>
+<p>This site was last updated on: <b>{{STAGING_DEPLOY_TIME}}</b></p>
+</div>
+{% endif %}
 </body>
 </html>
