--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -24,15 +24,13 @@
 <div id="dashboard-toc">
     <div id="modules">
  {% for module in root.get_children %}
- {% if  module.id < admin_lock %}	
-	<div class='module' id="{{ module.id }}">
-		{% comment %}{% for info in dashboard_info %}
-			{% ifequal module.id info.dashboard_id %}
-				{% ifnotequal info.info "" %}
-					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
-				{% endifnotequal %}
-			{% endifequal %}
-		{% endfor %}{% endcomment %}
+	<div class='module
+				{% for css in section_css %}
+		 			{% ifequal module.id css.section_css_id  %}
+		 				{{ css.css_field }}
+		 			{% endifequal %}
+		 		{% endfor %}'
+		  id="{{ module.id }}">
 
 		{% get_user_section_status request.user module as status %}
 		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
@@ -58,49 +56,7 @@
 		{% else %}
 		{% endif %}
 </div><!--end .module-->
-{% endif %}
 {% endfor %}
- 
-
-{% for module in root.get_children %}
- {% if  user.is_staff and module.id >= admin_lock  %}	
-	<div class='module' id="{{ module.id }}">
-		{% comment %}{% for info in dashboard_info %}
-			{% ifequal module.id info.dashboard_id %}
-				{% ifnotequal info.info "" %}
-					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
-				{% endifnotequal %}
-			{% endifequal %}
-		{% endfor %}{% endcomment %}
-
-		{% get_user_section_status request.user module as status %}
-		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
-			<div class="completed-icon"></div>
-			<a class="show-module completed" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
-			<a class="certificate" href="/certificate{{ module.get_absolute_url }}"><span class="tooltip-bottom" rel="tooltip" title="Print your completion certificate"><img src="/site_media/img/shim.png" width="30" height="30" /></span></a>
-			<div class="divclearfix"></div>
-		{% endifequal %}
-		{% ifequal status.status "allowed" %}
-			<div class="uninitiated-icon"></div>
-			<a class="show-module" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
-			<div class="divclearfix"></div>
-		{% endifequal %}
-		{% ifequal status.status "in_progress" %}<!-- **** IN PROGRESS -->
-			<div class="inprogress-icon"></div>
-			<a class="show-module inprogress" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
-			<div class="divclearfix"></div>
-		{% endifequal %}
-		{% if not status %}
-			<div class="uninitiated-icon"></div>
-			<a class="show-module uninitiated" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
-			<div class="divclearfix"></div>
-		{% else %}
-		{% endif %}
-</div><!--end .module-->
-{% endif %}
-{% endfor %}
-
-    
     </div>
     <div id="return"></div><!-- end #return -->
     <div class="divclearfix"></div><!-- divclearfix -->
