--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -99,7 +99,7 @@ $(function() {
 
 {% block sidebar %}
   <!-- ###### Secondary Navigation ###### -->
-      <h3>Sections</h3>
+      <h3>{{module}}</h3>
 {% with "/edit" as menu_base %}
 {% include "main/menu.html" %}
 {% endwith %}
