added hide section feature to selinium test

--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -311,7 +311,7 @@ method="post">
 <input type="submit" value="save" class="btn btn-primary" />
 </form>
 
-<form action="." method="post"
+<form id="section_css" action="." method="post"
       class="form-horizontal well">
   {{ section_css.edit_form|bootstrap }}
 <input type="submit" value="save" class="btn btn-primary" />
