adding inthe hide feature file and another test for checking the video module placement on the dashboard

--- a/phtc/templates/main/edit_page.html
+++ b/phtc/templates/main/edit_page.html
@@ -305,7 +305,7 @@ method="post">
 <input type="submit" value="save" class="btn btn-primary" />
 </form>
 
-<form action="." method="post"
+<form id="module-type" action="." method="post"
       class="form-horizontal well">
   {{ module_type.edit_form|bootstrap }}
 <input type="submit" value="save" class="btn btn-primary" />
