manual merge of value field requiremenst

--- a/phtc/templates/quizblock/edit_answer.html
+++ b/phtc/templates/quizblock/edit_answer.html
@@ -22,7 +22,7 @@
 
 <form action="." method="post" class="well form-horizontal" >
 <table width="100%">
-{{ answer.edit_form|bootstrap }}
+{{ answer_form|bootstrap}}
 </table>
 <input type="submit" value="save" class="btn btn-primary" />
 </form>
