--- a/phtc/templates/quizblock/edit_question.html
+++ b/phtc/templates/quizblock/edit_question.html
@@ -76,9 +76,9 @@ Answer {{ answer.display_number }}:
 
 {% if question.answerable %}
 <h3>Add Answer</h3>
-<form action="add_answer/" method="post" class="well form-horizontal">
+<form action=".{{request.get_full_path}}add_answer/" method="post" class="well form-horizontal/">
 <table width="100%">
-{{ question.add_answer_form|bootstrap}}
+{{ answer_form|bootstrap}}
 </table>
 <input type="submit" value="add answer" class="btn btn-primary" />
 </form>
