--- a/phtc/templates/quizblock/multiple_choice_feedback.html
+++ b/phtc/templates/quizblock/multiple_choice_feedback.html
@@ -5,7 +5,7 @@
 <ol type="A">
   {% for answer in question.answer_set.all %}
     {% if block.rhetorical %}
-      <li><input name="question{{question.id}}" value="{{answer.label}}" type="checkbox" />{{answer.label}}</li>
+      <li><input name="question{{question.id}}" value="{{answer.label|safe}}" type="checkbox" />{{answer.label|safe}}</li>
     {% else %}
       <li>
         {% if response %}
@@ -14,13 +14,13 @@
           response and more than one response by the user.
           {% endcomment %}
           {% ifanswerin response answer  %}
-            <span class="yours {% if answer.correct %}correct correctanswer{% else %}incorrect incorrectanswer{% endif %}">{{answer.label}}</span>
+            <span class="yours {% if answer.correct %}correct correctanswer{% else %}incorrect incorrectanswer{% endif %}">{{answer.label|safe}}</span>
           {% else %}
-            <span class="{% if answer.correct %}correct{% else %}incorrect{% endif %}">{{answer.label}}</span>
+            <span class="{% if answer.correct %}correct{% else %}incorrect{% endif %}">{{answer.label|safe}}</span>
           {% endifanswerin %}
         {% else %}
           {% comment %}no response{% endcomment %}
-          <input name="pageblock-{{block.pageblock.id}}-question{{question.id}}" value="{{answer.value}}" type="checkbox" />{{answer.label}}
+          <input name="pageblock-{{block.pageblock.id}}-question{{question.id}}" value="{{answer.value}}" type="checkbox" />{{answer.label|safe}}
         {% endif %}
       </li>
     {% endif %}
