--- a/phtc/templates/quizblock/single_choice.html
+++ b/phtc/templates/quizblock/single_choice.html
@@ -1,22 +1,31 @@
 {% load markup %}
-<ol type="A" class="answerchoices">
+<style>
+  .answer-value input[type="radio"]{
+    float: left;
+    clear: left;
+margin: -18px 0 0 20px;
+  }
+  ol {margin-left:0; padding-left:0; counter-reset:item}
+      ol>li {margin-left:0; padding-left:0; counter-increment:item; list-style:none inside}
+      ol>li:before {content:"" counter(item) "."; padding-right:0.5em}
+</style>
+<ol type="A">
   {% for answer in question.answer_set.all %}
     {% if block.rhetorical %}
-      <li><input name="question{{question.id}}" value="{{answer.label}}" type="radio" /> {{answer.label}}</li>
+      <li><div class="answer-value"><input name="question{{question.id}}" value="{{answer.label|safe}}" type="radio" />{{answer.label|safe}}</div></li>
     {% else %}
-      <li>
+      <li><div class="answer-value">
         {% if response %}
           {% ifequal response.value answer.value %}
-            <span class="yours {% if response.is_correct %}correct{% else %}incorrect{% endif %}"> {{answer.label}}</span>
+            <span class="yours {% if response.is_correct %}correct{% else %}incorrect{% endif %}">{{answer.label|safe}}</span>
           {% else %}
-            {{answer.label}}
+            {{answer.label|safe}}
           {% endifequal %}
         {% else %}
           <input name="pageblock-{{block.pageblock.id}}-question{{question.id}}"
-	  value="{{answer.label}}" type="radio" />{{answer.label}}
-        {% endif %}
+    value="{{answer.value}}" type="radio" />{{answer.label|safe}}
+        {% endif %}</div>
       </li>
     {% endif %}
   {% endfor %}
 </ol>
-
