--- a/phtc/templates/quizblock/single_choice_dropdown.html
+++ b/phtc/templates/quizblock/single_choice_dropdown.html
@@ -2,7 +2,7 @@
 
 <select name="pageblock-{{block.pageblock.id}}-question{{question.id}}">
   {% for answer in question.answer_set.all %}
-      <option value="{{answer.value}}">{{answer.label}}</option>
+      <option value="{{answer.value}}">{{answer.label|safe}}</option>
   {% endfor %}
 </select>
 
