--- a/phtc/templates/main/page.html
+++ b/phtc/templates/main/page.html
@@ -28,6 +28,11 @@
 
 {% block content %}
 <div id="content">
+  {% if is_mod_one %}
+      <style>
+        #sidebarleft ul ul{margin: 0 !important;}
+      </style>
+    {% endif %}
 {% if needs_submit %}
 {% if is_submitted %}
 {% else %}
