--- a/media/js/checkbox_activity/styles.css
+++ b/media/js/checkbox_activity/styles.css
@@ -30,6 +30,7 @@
   font-size: 24px;
 }
 .answr-x{
+  margin: -3px 0 0 0;
   color: #333 !important;
   font-weight: bold;
   padding: 0 0 0 15px !important;
