starting to work

--- a/phtc/templates/treatment_activity/block_js.html
+++ b/phtc/templates/treatment_activity/block_js.html
@@ -8,7 +8,10 @@
         var view = new TreatmentActivityView({
             el: 'div.treatment-activity-container'
         });
+            console.log ("hi there");
+            console.log (view);
     });
+
 </script>
 
 <script type="text/template" id="patient-factors">
