ok this is actually starting to work nicely

--- a/phtc/templates/treatment_activity/block_js.html
+++ b/phtc/templates/treatment_activity/block_js.html
@@ -13,7 +13,7 @@
 </script>
 
 <script type="text/template" id="patient-factors">
-    <button type="button" class="btn btn-large btn-success btn-primary run_test" >test</button>
+    <button type="button" class="btn btn-large btn-success btn-primary run_test" >Start over</button>
 </script>
 
 <script type="text/template" id="treatment-step">
