moving the Label content to the Text field

--- a/phtc/templates/treatment_activity/block_js.html
+++ b/phtc/templates/treatment_activity/block_js.html
@@ -36,7 +36,7 @@
                         <i class="icon-edit"></i>
                     </a>
                 <% } %>
-                <p class="step-content"><%= name %> </p><br />
+                <p class="step-content"><%= text %> </p><br />
             </div>
 
 
@@ -104,7 +104,7 @@
                     </a>
                 <% } %>                
                 <p>
-                    <p class="step-content"><%= name %></p>
+                    <p class="step-content"><%= text %></p>
                     <div>
                         To view other treatment paths, reset patient factors.
                         <div>
