--- a/phtc/templates/logic_model/block_js.html
+++ b/phtc/templates/logic_model/block_js.html
@@ -1,17 +1,18 @@
 <script src="/site_media/js/underscore-min.js" type="text/javascript" ></script>
 <script src="/site_media/js/backbone-min.js" type="text/javascript" ></script>
-
-<script src="/_rgt/media/js/treatment_activity.js?version=1" type="text/javascript" ></script>
+<script src="/_logic_model/media/js/logic_model.js?version=1" type="text/javascript" ></script>
 
 <script type="text/javascript">
+
     jQuery(document).ready(function () {
-        var view = new TreatmentActivityView({
-            el: 'div.treatment-activity-container'
+        var view = new LogicModelView({
+            el: 'div.logic-model-container'
         });
     });
 
 </script>
 
+<!--
 <script type="text/template" id="patient-factors">
     <button type="button" class="btn btn-large btn-success btn-primary run_test" >Start over</button>
 </script>
@@ -23,7 +24,7 @@
             
 
 
-        <% if (type === 'IF') { /* Generic Treatment Step */ %>                    
+        <% if (type === 'IF') {  %>                    
             <div class="timeline">
                 
             </div>
@@ -45,7 +46,7 @@
 
 
 
-        <% } else if (type === 'DP') { /* Decision Point */ %>
+        <% } else if (type === 'DP') { %>
             <div class="timeline">
                 <div class="duration"></div>
             </div>
@@ -90,7 +91,7 @@
 
 
 
-        <% } else if (type === 'ST') { /* Stop */ %>
+        <% } else if (type === 'ST') {  %>
             <div class="timeline">
                 <div class="duration"></div>
             </div>
@@ -129,3 +130,5 @@
     </div>
     <div style="clear: both"></div>
 </script>
+-->
+
