--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -1,4 +1,4 @@
 <div class="logic-model-container">
-    <div class="logic-model-view">View goes here.</div>
-    <div class="logic-model-stuff">Stuff goes here.</div>
+    <div class="logic-model-view" style="display:none">View goes here.</div>
+    <div class="logic-model-stuff"  style="display:none">Stuff goes here.</div>
 </div>
