--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -1,4 +1,13 @@
 <div class="logic-model-container">
-    <div class="logic-model-view" style="display:none">View goes here.</div>
-    <div class="logic-model-stuff"  style="display:none">Stuff goes here.</div>
+
+	<div class="logic-model-scenario">Here we go yo</div>
+    
+    <div class="logic-model-columns"></div>
+    
+    <div class = "well reflections_box">
+	    <textarea>Reflections</textarea>
+	</div>
+
+	<div id = "next_phase" class="btn btn-primary btn-large">next phase</div>
+	<div id = "previous_phase" class="btn btn-primary btn-large">previous phase</div>
 </div>
