--- a/phtc/templates/logic_model/block_js.html
+++ b/phtc/templates/logic_model/block_js.html
@@ -3,14 +3,18 @@
 <script src="/_logic_model/media/js/logic_model.js?version=1" type="text/javascript" ></script>
 
 <script type="text/javascript">
-
     jQuery(document).ready(function () {
         var view = new LogicModelView({
             el: 'div.logic-model-container'
         });
     });
-
 </script>
+
+
+
+
+{%include "logic_model/subtemplates/column.html" %}
+
 
 <!--
 <script type="text/template" id="patient-factors">
