--- a/phtc/templates/logic_model/logic_model.html
+++ b/phtc/templates/logic_model/logic_model.html
@@ -1,13 +1,14 @@
 <div class="logic-model-container">
-
 	<div class="logic-model-scenario">Here we go yo</div>
-    
-    <div class="logic-model-columns"></div>
-    
-    <div class = "well reflections_box">
-	    <textarea>Reflections</textarea>
-	</div>
 
-	<div id = "next_phase" class="btn btn-primary btn-large">next phase</div>
-	<div id = "previous_phase" class="btn btn-primary btn-large">previous phase</div>
+	<div class="logic-model-game-phase-instructions">Instructions for this phase of the game.</div>
+
+	<div class="logic-model-columns"></div>
+
+	<textarea id ="reflections">Reflections</textarea>
+
+	<div id ="phase_nav">
+		<div id = "next_phase" class="btn btn-primary btn-large">next phase</div>
+		<div id = "previous_phase" class="btn btn-primary btn-large">previous phase</div>
+	</div>
 </div>
