--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -1,7 +1,12 @@
 <script type="text/template" id="logic-model-column">
-<span class="logic_model_box">
-	<%=name %>
-</span>
-
-
+	<span class ="<%=css_classes %>" >
+	    <div class="colhead"><%=name %></div>
+	    <div class="cell">Cell</div>
+	    <div class="cell">Cell</div>
+	    <div class="cell">Cell</div>
+	    <div class="cell">Cell</div>
+	    <div class="cell">Cell</div>
+	    <div class="cell">Cell</div>
+	    <div class="divclearfix"></div>
+    </span>
 </script>
