ok, we have game phases working nicely.

--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -1,5 +1,5 @@
 <script type="text/template" id="logic-model-column">
-	<span class ="<%=css_classes %>" >
+	<span class ="column_span <%=css_classes %>" >
 	    <div class="colhead"><%=name %></div>
 	    <div class="cell">Cell</div>
 	    <div class="cell">Cell</div>
