--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -5,10 +5,6 @@ header#masthead {
 .row {
   padding-top: 0px;
 }
-
-
-
-
 textarea#reflections {
   margin: 2px;
   padding: 2px;
@@ -37,6 +33,12 @@ span.column_span {
     margin-left:0px;
 }
 
+span.backbone_column_span {
+    width:  140px;
+    margin-left:0px;
+}
+
+
 .cell {
   width: 130px;
   height: 50px;
@@ -58,6 +60,75 @@ span.column_span {
   border: 1px solid #ccc;
   background-color: #ccc;
 
+}
+
+/* Phases of the game */
+
+
+
+/* Pick scenario:*/
+#phase_container.pick_scenario div.logic-model-columns, 
+#phase_container.pick_scenario textarea#reflections {
+    display:none;
+}
+
+
+/* Add inputs:*/
+
+#phase_container.add_inputs .column_span.outputs,
+#phase_container.add_inputs .column_span.activities,
+#phase_container.add_inputs .column_span.short_term_outcomes,
+#phase_container.add_inputs .column_span.intermediate_outcomes,
+#phase_container.add_inputs .column_span.long_term_outcomes
+{
+    background-color: grey;
+}
+#phase_container.add_inputs div.logic-model-initial-scenario_choice {
+    display:none;
+}
+
+/* Add long term outcomes:*/
+
+#phase_container.add_long_term_outcomes .column_span.inputs,
+#phase_container.add_long_term_outcomes .column_span.outputs,
+#phase_container.add_long_term_outcomes .column_span.activities,
+#phase_container.add_long_term_outcomes .column_span.short_term_outcomes,
+#phase_container.add_long_term_outcomes .column_span.intermediate_outcomes
+{
+    background-color: grey;
+}
+#phase_container.add_long_term_outcomes div.logic-model-initial-scenario_choice {
+    display:none;
+}
+
+
+/* Add intermediate columns:*/
+
+
+
+#phase_container.add_intermediate_columns .column_span.inputs,
+#phase_container.add_intermediate_columns .column_span.long_term_outcomes
+{
+    background-color: grey;
+}
+#phase_container.add_intermediate_columns div.logic-model-initial-scenario_choice {
+    display:none;
+}
+
+
+
+
+
+/* Finish work:*/
+
+#phase_container.finish_work div.logic-model-initial-scenario_choice {
+    display:none;
+}
+
+
+/* Finish work:*/
+#phase_container.conclusion div.logic-model-initial-scenario_choice {
+    display:none;
 }
 
 
