ok we now have boxes

--- a/phtc/templates/logic_model/subtemplates/column.html
+++ b/phtc/templates/logic_model/subtemplates/column.html
@@ -1,12 +1,7 @@
 <script type="text/template" id="logic-model-column">
-	<span class ="column_span <%=css_classes %>" >
+	<span class ="column_span <%=css_classes %>">
 	    <div class="colhead"><%=name %></div>
-	    <div class="cell">Cell</div>
-	    <div class="cell">Cell</div>
-	    <div class="cell">Cell</div>
-	    <div class="cell">Cell</div>
-	    <div class="cell">Cell</div>
-	    <div class="cell">Cell</div>
+	    <span class ="boxes">
 	    <div class="divclearfix"></div>
     </span>
 </script>
