--- a/phtc/templates/logic_model/block_js.html
+++ b/phtc/templates/logic_model/block_js.html
@@ -1,5 +1,6 @@
 <script src="/site_media/js/underscore-min.js" type="text/javascript" ></script>
 <script src="/site_media/js/backbone-min.js" type="text/javascript" ></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="/_logic_model/media/js/logic_model.js?version=1" type="text/javascript" ></script>
 <script type="text/javascript">
     jQuery(document).ready(function () {
