--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -1,3 +1,11 @@
 <script type="text/template" id="logic-model-box">
-	    <div class="cell">Cell</div>
+	    <div class="cell">
+	    	<div class = "box_droppable">
+		    	<div class = "box_draggable">
+			    		<div class = "box_handle"><i class="icon-large icon-move"></i>
+			    		</div>
+			    	<input type="text" value ="" class="text_box"></input>
+		    	</div>
+	    	</div>
+	    </div>
 </script>
