ok first version of empty-aware drag and drop

--- a/phtc/logic_model/media/css/logic_model.css
+++ b/phtc/logic_model/media/css/logic_model.css
@@ -73,9 +73,19 @@ input.text_box {
   cursor: pointer;
 
 }
+.box_droppable {
+  height: 50px;
+}
 
 .active_droppable {
   background-color: green;
+}
+
+.box_draggable .box_handle {
+  position: relative;
+  left : 100px;
+  top : 10px;
+
 }
 
 .hover_droppable {
