--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -4,7 +4,7 @@
 		    	<div class = "box_draggable">
 			    		<div class = "box_handle"><i class="icon-large icon-move"></i>
 			    		</div>
-			    	<input type="text" value ="" class="text_box"></input>
+			    	<input type="text" value ="<%=contents%>" class="text_box"></input>
 		    	</div>
 	    	</div>
 	    </div>
