--- a/phtc/templates/logic_model/subtemplates/box.html
+++ b/phtc/templates/logic_model/subtemplates/box.html
@@ -2,8 +2,9 @@
 	    <div class="cell">
 	    	<div class = "box_droppable">
 		    	<div class = "box_draggable">
-			    		<div class = "box_handle"><i class="icon-large icon-move"></i>
-			    		</div>
+		    		<div class = "box_handle">
+		    			<i class="icon-large icon-move"></i>
+		    		</div>
 			    	<input type="text" value ="<%=contents%>" class="text_box"></input>
 		    	</div>
 	    	</div>
